# Lab_1

./: CMakeLists.txt  Helper.cpp  Helper.h  Lab_1.py  README.md  lab1_data_2026.txt  main.cpp  v_hat.txt  x_hat.txt
